--- a/www/templates/lbwPage.html
+++ b/www/templates/lbwPage.html
@@ -1,5 +1,15 @@
 <ion-view view-title="Lbw Page" class="lbwPage">
   <ion-content class="padding">
+
+
+    <h2 id="pointX"></h2>
+    <h2 id="pointY"></h2>
+    <h2 id="pointX"></h2>
+
+	<div id=canvasHolder></div>
+
     <button class="howzatBtn" ng-click="goToDecisionPage()">Howzat!</button>
   </ion-content>
 </ion-view>
+
+
