--- a/www/templates/instructionsPage.html
+++ b/www/templates/instructionsPage.html
@@ -1,5 +1,17 @@
-<ion-view view-title="Instructions Page" class="instructionsPage">
-  <ion-content>
-    <button class="setUpBtn" ng-click="goToSetUpPage()">Set Up Stumps</button>
+<ion-view view-title="Instructions" class="instructionsPage">
+  <ion-content scroll="false">
+    <ul>
+      <li>
+        1. Set up your phone at the bowlers end
+      </li>
+      <li>
+        2. Set up your stumps
+      </li>
+      <li>
+        3. Go LIVE!
+      </li>
+
+    </ul>
+    <button class="setUpBtn" ng-click="goToSetUpPage()"><i class="icon icon-setUp"></i>Set Up Stumps</button>
   </ion-content>
 </ion-view>
