--- a/www/templates/setUpPage.html
+++ b/www/templates/setUpPage.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Set up stumps" class="setUpPage">
   <ion-content scroll="false">
-    <video id="video" width="screen.width" height="screen.height" autoplay></video>
+    <video id="video" width="640" height="600" autoplay></video>
     <div class="item range stumpsSize">
       <i class="icon icon-cricketBall icon1"></i>
       <input type="range" name="volume" min="0" max="20">
