--- a/www/css/style.css
+++ b/www/css/style.css
@@ -142,12 +142,12 @@
 
 /*SetUp Page*/
 
-.setUpPage video{
+/* .setUpPage video{
   width: 100%;
   height: 100%;
   z-index: 0;
-  /* border: 1px solid black; */
-}
+  border: 1px solid black;
+} */
 
 .setUpPage .stumpsSize{
   bottom: 25vh;
