--- a/www/templates/setUpPage.html
+++ b/www/templates/setUpPage.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Set up stumps" class="setUpPage">
   <ion-content scroll="false">
+    <input type="file" accept="image/*;capture=camera">
     <video id="video" width="640" height="600" autoplay></video>
     <div class="item range stumpsSize">
       <i class="icon icon-cricketBall icon1"></i>
