--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,15 +19,21 @@ $dark:                            #444 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 @font-face {
-font-family: "Payback";
-src: url(../assets/fonts/PAYBACK.ttf) format("ttf");
-font-weight: 200
+    font-family: 'Payback';
+    src: url('../lib/ionic/fonts/PaybAck.woff2') format('woff2'),
+        url('PaybAck.woff') format('woff'),
+        url('PaybAck.svg#PaybAck') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-font-family: "Bebas";
-src: url(../assets/fonts/Bebas.ttf) format("ttf");
-font-weight: 200
+    font-family: 'Bebas';
+    src: url('../lib/ionic/fonts/Bebas.woff2') format('woff2'),
+        url('../lib/ionic/fonts/Bebas.woff') format('woff'),
+        url('../lib/ionic/fonts/Bebas.svg#Bebas') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 // Include all of Ionic
