--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -16,6 +16,7 @@ $dark:                            #444 !default;
 */
 
 // The path for our ionicons font files, relative to the built CSS in www/css
+@import BABAS.scss’;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 @font-face {
