--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,7 +9,7 @@
   color: #ffffff !important;
   font-size: 25px !important;
   letter-spacing: 5px;
-  font-family: "Payback" !important;
+  font-family: "PAYBACK" !important;
 }
 
 .homePage{
@@ -31,7 +31,7 @@
   border-radius: 5px;
   color: #efefef;
   font-size: 30px;
-  font-family: "Bebas" !important;
+  font-family: "BEBAS" !important;
   letter-spacing: 1px;
   box-shadow: 0px 0px 10px #aeaeae;
 }
@@ -101,7 +101,7 @@
   letter-spacing: 0.5px;
   line-height: normal;
   color: #ffffff;
-  font-family: "Bebas" !important;
+  font-family: "BEBAS" !important;
   word-spacing: 2px;
 }
 
@@ -120,7 +120,7 @@
   border-radius: 5px;
   color: #efefef;
   font-size: 30px;
-  font-family: "Bebas" !important;
+  font-family: "BEBAS" !important;
   letter-spacing: 1px;
   box-shadow: 0px 0px 10px #aeaeae;
 }
@@ -187,7 +187,7 @@
   border-radius: 5px;
   color: #efefef;
   font-size: 30px;
-  font-family: "Bebas" !important;
+  font-family: "BEBAS" !important;
   letter-spacing: 1px;
   box-shadow: 0px 0px 10px #aeaeae;
 }
