--- a/www/css/style.css
+++ b/www/css/style.css
@@ -146,8 +146,19 @@
   width: 100%;
   height: 100%;
   z-index: 0;
-  border: 1px solid black;
-} */
+  /* border: 1px solid black; */
+}
+
+.setUpPage video{
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: contain !important;
+
+}
+
+ion-header-bar{
+  background: transparent!important;
+}
 
 .setUpPage .stumpsSize{
   bottom: 25vh;
@@ -160,6 +171,7 @@
   right:0;
   text-align: center;
   width: 90vw;
+  background: none;
 }
 
 .setUpPage .stumpsSize .icon1{
