--- a/www/templates/setUpPage.html
+++ b/www/templates/setUpPage.html
@@ -1,8 +1,13 @@
 <ion-view view-title="Set up stumps" class="setUpPage">
   <ion-content scroll="false">
-    <video id="gum-local" autoplay playsinline></video>
+    <video class="videoCapture" autoplay playsinline></video>
+    <!-- <p>
+      CAMERA
+    </p> -->
 
     <div id="errorMsg"></div>
+
+    <div class="redBox"></div>
 
     <div class="item range stumpsSize">
       <i class="icon icon-cricketBall icon1"></i>
