--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -16,26 +16,30 @@ $dark:                            #444 !default;
 */
 
 // The path for our ionicons font files, relative to the built CSS in www/css
-@import BABAS.scss’;
+// @import url('BABAS.scss');
+// @import url('PAYBACK.scss');
+
+@font-face {
+    font-family: 'BEBAS' ;
+    src: url('../lib/ionic/fonts/BEBAS.eot');
+    src: url('../lib/ionic/fonts/BEBAS.eot') format('embedded-opentype'),
+         url('../lib/ionic/fonts/BEBAS.woff2') format('woff2'),
+         url('../lib/ionic/fonts/BEBAS.woff') format('woff'),
+         url('../lib/ionic/fonts/BEBAS.ttf') format('truetype'),
+         url('../lib/ionic/fonts/BEBAS.svg#BEBAS') format('svg');
+}
+
+@font-face {
+    font-family: 'PAYBACK';
+    src: url('../lib/ionic/fonts/PAYBACK.eot');
+    src: url('../lib/ionic/fonts/PAYBACK.eot') format('embedded-opentype'),
+         url('../lib/ionic/fonts/PAYBACK.woff2') format('woff2'),
+         url('../lib/ionic/fonts/PAYBACK.woff') format('woff'),
+         url('../lib/ionic/fonts/PAYBACK.ttf') format('truetype'),
+         url('../lib/ionic/fonts/PAYBACK.svg#PAYBACK') format('svg');
+}
+
 $ionicons-font-path: "../lib/ionic/fonts" !default;
-
-@font-face {
-    font-family: 'Payback';
-    src: url('../lib/ionic/fonts/PaybAck.woff2') format('woff2'),
-        url('PaybAck.woff') format('woff'),
-        url('PaybAck.svg#PaybAck') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Bebas';
-    src: url('../lib/ionic/fonts/Bebas.woff2') format('woff2'),
-        url('../lib/ionic/fonts/Bebas.woff') format('woff'),
-        url('../lib/ionic/fonts/Bebas.svg#Bebas') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
