--- a/www/templates/decisionPage.html
+++ b/www/templates/decisionPage.html
@@ -1,5 +1,13 @@
-<ion-view view-title="Decision Page" class="decisionPage">
+
+
+<ion-view class="decisionPage">
+
   <ion-content class="padding">
+
+    
+
+
     <button class="homeBtn" ng-click="goToHomePage()">Go Home</button>
   </ion-content>
+
 </ion-view>
