--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -1,4 +1,4 @@
-s@charset "UTF-8";
+@charset "UTF-8";
 /*
 To customize the look and feel of Ionic, you can override the variables
 in ionic's _variables.scss file.
@@ -15,15 +15,18 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+html, body, .ion-app, .ion-content {
+  background-color: transparent; }
+
 @font-face {
   font-family: 'BEBAS';
   src: url("../lib/ionic/fonts/BEBAS.eot");
-  src: url("../lib/ionic/fonts/BEBAS.eot") format("embedded-opentype"), url("../lib/ionic/fonts/BEBAS.woff2") format("woff2"), url("../lib/ionic/fonts/BEBAS.woff") format("woff"), url("../lib/ionic/fonts/BEBAS.ttf") format("truetype"), url("../lib/ionic/fonts/BEBAS.svg#BEBAS") format("svg");
+  src: url("../lib/ionic/fonts/BEBAS.eot") format("embedded-opentype"), url("../lib/ionic/fonts/BEBAS.woff2") format("woff2"), url("../lib/ionic/fonts/BEBAS.woff") format("woff"), url("../lib/ionic/fonts/BEBAS.ttf") format("truetype"), url("../lib/ionic/fonts/BEBAS.svg#BEBAS") format("svg"); }
 
 @font-face {
   font-family: 'PAYBACK';
   src: url("../lib/ionic/fonts/PAYBACK.eot");
-  src: url("../lib/ionic/fonts/PAYBACK.eot") format("embedded-opentype"), url("../lib/ionic/fonts/PAYBACK.woff2") format("woff2"), url("../lib/ionic/fonts/PAYBACK.woff") format("woff"), url("../lib/ionic/fonts/PAYBACK.ttf") format("truetype"), url("../lib/ionic/fonts/PAYBACK.svg#PAYBACK") format("svg");
+  src: url("../lib/ionic/fonts/PAYBACK.eot") format("embedded-opentype"), url("../lib/ionic/fonts/PAYBACK.woff2") format("woff2"), url("../lib/ionic/fonts/PAYBACK.woff") format("woff"), url("../lib/ionic/fonts/PAYBACK.ttf") format("truetype"), url("../lib/ionic/fonts/PAYBACK.svg#PAYBACK") format("svg"); }
 
 /*!
   Ionicons, v2.0.1
