--- a/www/templates/instructionsPage.html
+++ b/www/templates/instructionsPage.html
@@ -5,13 +5,16 @@
         1. Set up your phone at the bowlers end
       </li>
       <li>
-        2. Set up your stumps
+        2. Choose your stumps and ball
       </li>
       <li>
-        3. Go LIVE!
+        3. Set up your stumps
+      </li>
+      <li>
+        4. Go LIVE!
       </li>
 
     </ul>
-    <button class="setUpBtn" ng-click="goToSetUpPage()"><i class="icon icon-setUp"></i>Set Up Stumps</button>
+    <button class="setUpBtn" ng-click="goToChooseEquipmentPage()"><i class="icon icon-setUp"></i>Set Up Stumps</button>
   </ion-content>
 </ion-view>
