--- a/www/templates/lbwPage.html
+++ b/www/templates/lbwPage.html
@@ -15,10 +15,11 @@
 
      <h2 id="distance"></h2>
      <h2 id="balltext"></h2>
+     <h2 id="maxText"></h2>
     </div>
 
     <button class="howzatBtn" ng-click="goToDecisionPage()">Howzat!</button>
 
   </ion-content>
-  
+
 </ion-view>
